kubernetes/apps/media/cleanrr/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cleanrr
spec:
  # *arr cleanup helper. No gateway route -- scraped by Prometheus and reachable
  # intra-media only. Selecting it makes it default-deny.
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: media
      app.kubernetes.io/name: cleanrr
  ingress:
    # Prometheus scrape + intra-media on :80
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: o11y
            app.kubernetes.io/name: prometheus
        - matchLabels:
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # kubelet probe :80
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    # DNS resolution (L7 so lookups are visible to Cilium's DNS proxy)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Intra-media trust zone (*arr APIs)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
    # External services over HTTPS
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
